[package]
name = "bookparsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yaserde = "0.8.0"
yaserde_derive = "0.8.0"
serde = {version = "1.0.160" }

log = "0.4"
xml-rs = "0.8"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0.160", features = ["derive"] }
microbench = "0.5.0"